Fixed css bug that project view is invisible on chrome / osx

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -703,6 +703,7 @@ i {
 
 .references {
     height: 100vh;
+    width: 100%;
     overflow: hidden;
 }
 
